# voice-embedding

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yaml  lint-pr-title.yaml
aws/: template.yaml
src/voice_embedding/: .app.py.swp  __init__.py  app.py
tests/: .test__integration.py.swp  conftest.py  test__integration.py  test__unit.py
